# flask_blog

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 51e954a19a51_add_test.py  66ef9524352b_init.py
src/: app.py  auth.py  blog.py  config.py  database.py
src/api_v1/: __init__.py
src/api_v1/posts/: api.py  models.py  view.py
src/api_v1/users/: api.py  models.py  view.py
src/static/css/: style.css
src/templates/: base.html  create.html  edit.html  index.html  login.html  post.html
tests/: conftest.py  flask blog api.postman_collection.json  test_01_factory.py  test_02_db.py  test_03_auth.py  test_04_blog.py
