[project]
name = "flask-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "kot9pa",email = "kot9paa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-openapi3[swagger] (>=4.1.0,<5.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "coverage (>=7.7.1,<8.0.0)",
    "flask-session[redis] (>=0.8.0,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]